Use @min and @max for validation

--- a/src/main/resources/templates/customer-confirmation.html
+++ b/src/main/resources/templates/customer-confirmation.html
@@ -8,7 +8,7 @@
 
 
 Customer is confirmed: <span
-        th:text="${customer.firstName} + ' ' + ${customer.lastName} + ' has been registered'"></span>
+        th:text="${customer.firstName} + ' ' + ${customer.lastName} + ' has been registered with free passes: ' + ${customer.freePasses}"></span>
 
 </body>
 </html>
