Use regex for validation

--- a/src/main/resources/templates/customer-confirmation.html
+++ b/src/main/resources/templates/customer-confirmation.html
@@ -8,7 +8,8 @@
 
 
 Customer is confirmed: <span
-        th:text="${customer.firstName} + ' ' + ${customer.lastName} + ' has been registered with free passes: ' + ${customer.freePasses}"></span>
+        th:text="${customer.firstName} + ' ' + ${customer.lastName} + ' has been registered with free passes: ' +
+        ${customer.freePasses} + ' and postal code: ' +  ${customer.postalCode}"></span>
 
 </body>
 </html>
