Implement Annotation for custom validation.

--- a/src/main/resources/templates/customer-form.html
+++ b/src/main/resources/templates/customer-form.html
@@ -37,6 +37,12 @@
 
     <span th:if="${#fields.hasErrors('postalCode')}" th:errors="*{postalCode}" class="error"></span>
 
+    <br><br>
+
+    Course Code: <input type="text" th:field="*{courseCode}"/><br>
+
+    <span th:if="${#fields.hasErrors('courseCode')}" th:errors="*{courseCode}" class="error"></span>
+
     <br><br><br>
 
     <input type="submit" value="Submit">
